--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,10 @@
 image:
   file: .gitpod.Dockerfile
 
-
+ports:
+  - port: 5432
+    onOpen: ignore
+  - port: 8080
+    onOpen: open-browser
+  - port: 5000
+    onOpen: open-browser
