--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,14 @@
 image:
   file: .gitpod.Dockerfile
 
+tasks:
+  - init: createdb test_01 test_02 test_03 test_04 test_05 test_06 test_07 test_08 test_09 test_10
 ports:
   - port: 5432
     onOpen: ignore
   - port: 8080
+    onOpen: open-browser
+  - port: 8000
     onOpen: open-browser
   - port: 5000
     onOpen: open-browser
