Pull pre-built image to save boot time

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,4 @@
-image:
-  file: .gitpod.Dockerfile
+image: mhworth/carta-work-tests
 tasks:
   - init: createdb test_01 test_02 test_03 test_04 test_05 test_06 test_07 test_08 test_09 test_10
   - init: python setup.py develop
